Test/errors/err_use_after_move_foreach.cb
// Loop-carried use-after-move inside a foreach body: the loop ELEMENT is rebound each
// iteration (a fresh binding), but an OUTER owning pointer p moved in the body stays moved
// across the back-edge. Confirms the element rebind does not mask an outer-variable move.
expect_error("use of moved variable 'p'");
import "list.cb";
struct Node { int v = default; };
void sink(move Node* n) { delete n; }
int main()
{
    Node* p = new Node;
    list<int> xs;
    xs.add(1);
    xs.add(2);
    for (int e in xs)
    {
        sink(p);
    }
    return 0;
}
